<resources>
    <string name="app_name">LeMAO</string>
    <string name="title_activity_login">登陆/注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登陆/注册</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">设置</string>

    <string name="upcoming_events">我参加的项目</string>
    <string name="suggested_events">给我推荐的项目</string>
    <string name="newsfeed">我的新闻</string>

    <string name="popular_now">热门项目</string>
    <string name="recently_added">最近加入</string>

    <string name="search">搜索</string>
    <string name="categories_1">类型一 （运动）</string>
    <string name="categories_2">类型二 （烹饪）</string>
    <string name="subcategories">名字</string>

    <string name="create_new_event">创建新项目</string>
    <string name="new_event_name">项目名称：__________________</string>
    <string name="new_event_date">项目时间：__________________</string>
    <string name="new_event_description">项目描述：__________________</string>
    <string name="continue_draft">继续创建</string>

    <string name="name_fixed">"姓名: "</string>
    <string name="my_groups_fixed">"我的小群: "</string>
    <string name="gender_fixed">"性别: "</string>
    <string name="name">"北大交换生"</string>
    <string name="my_groups">"羽球小队"</string>
    <string name="gender">"其他"</string>
    <string name="calendar">"我的日历"</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_event_page">EventPageActivity</string>
    <string name="title_activity_group_page">GroupPageActivity</string>

</resources>
